test/conformance/chainsaw/reports/background/report-deletion/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: podsecurity-subrule-restricted
spec:
  admission: false
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: restricted
    validate:
      failureAction: Audit
      podSecurity:
        level: restricted
        version: latest
