test/conformance/chainsaw/reports/background/report-deletion/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: badpod01
scope:
  apiVersion: v1
  kind: Pod
  name: badpod01
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
