test/conformance/chainsaw/reports/background/report-deletion/report-error.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: badpod01
