test/conformance/chainsaw/reports/background/report-deletion/01-pod.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: pod
spec:
  try:
  - apply:
      file: pod.yaml
