test/conformance/chainsaw/reports/background/report-deletion/03-delete-policy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: delete-policy
spec:
  try:
  - delete:
      apiVersion: kyverno.io/v1
      kind: ClusterPolicy
      name: podsecurity-subrule-restricted
