test/conformance/chainsaw/reports/background/report-deletion/04-check-report-deleted.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: check-report-deleted
spec:
  try:
  - error:
      file: report-error.yaml
