test/conformance/chainsaw/reports/background/report-deletion/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: report-deletion
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: podsecurity-subrule-restricted
  - name: step-01
    try:
    - apply:
        file: pod.yaml
  - name: step-02
    try:
    - assert:
        file: report-assert.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: podsecurity-subrule-restricted
  - name: step-04
    try:
    - error:
        file: report-error.yaml
